pegasus/src/Pegasus/Compiler/tests/invalidMOF/badQualifierDecl15.mof
/* No Terminating paren onScope definition*/
Qualifier Abstract : boolean = false, 
    Scope(class, association, indication, 
    Flavor(EnableOverride,Restricted);
